gengo/bind/sdk/Stderr.log
..\..\..\bin\debug\SDK\Headers\BasicTypes.h:32:9: error: unknown type name 'wchar_t'
   32 | typedef wchar_t            WCHAR;
      |         ^
1 error generated.
